[gd_scene load_steps=35 format=3 uid="uid://bsj8x1oxp0cqn"]

[ext_resource type="Script" path="res://scripts/world/World.gd" id="1_w1wil"]
[ext_resource type="PackedScene" uid="uid://cov3kryfnxah6" path="res://scenes/player/player.tscn" id="3_pp1my"]
[ext_resource type="PackedScene" uid="uid://dho52j1svafa7" path="res://scenes/rooms/Room_AerendaleTown.tscn" id="4_6wqko"]
[ext_resource type="PackedScene" uid="uid://cljrtsdy6t6gw" path="res://scenes/world/map_screen.tscn" id="5_4gctl"]
[ext_resource type="PackedScene" uid="uid://cnkwa1lnnfamm" path="res://scenes/rooms/Room_AerendaleJunkyard.tscn" id="5_d2ced"]
[ext_resource type="Shader" path="res://shaders/war_shader.gdshader" id="6_66776"]
[ext_resource type="PackedScene" uid="uid://dbo4t4k7ob3qg" path="res://scenes/rooms/Room_AerendaleBattlefield.tscn" id="6_t47eu"]
[ext_resource type="PackedScene" uid="uid://bkcqtqfijxmyn" path="res://scenes/rooms/Room_AerendaleCapital.tscn" id="7_ou7s5"]
[ext_resource type="Script" path="res://scenes/world/war_effect.gd" id="7_t1be6"]
[ext_resource type="PackedScene" uid="uid://dignl4ivlyijc" path="res://scenes/rooms/Room_HiddenRuins.tscn" id="9_8mm3s"]
[ext_resource type="PackedScene" uid="uid://klvtn501ec6g" path="res://scenes/rooms/Room_HiddenRuinsField.tscn" id="9_v56yw"]
[ext_resource type="PackedScene" uid="uid://d31x3lq4tpd8s" path="res://scenes/rooms/Room_TromarveliaTown.tscn" id="10_vsvcc"]
[ext_resource type="PackedScene" uid="uid://b3dq36l3txbp4" path="res://scenes/rooms/Room_TromarveliaBattlefield.tscn" id="11_rs5ry"]
[ext_resource type="PackedScene" uid="uid://bps10xv2v18d" path="res://scenes/rooms/Room_TromarveliaCastle.tscn" id="12_bfh2l"]
[ext_resource type="PackedScene" uid="uid://cr00h80xpx5tm" path="res://scenes/rooms/Room_TromarveliaDungeon.tscn" id="13_wwr1u"]
[ext_resource type="PackedScene" uid="uid://baky2m7irkgi0" path="res://scenes/rooms/Room_TromarveliaNora.tscn" id="14_mfqso"]
[ext_resource type="PackedScene" uid="uid://2y3devuwcuju" path="res://scenes/rooms/Room_ExactlyionTown.tscn" id="15_wky0v"]
[ext_resource type="PackedScene" uid="uid://cnbcuo1v16c7" path="res://scenes/rooms/Room_ExactlyionBattlefield.tscn" id="16_acxiu"]
[ext_resource type="PackedScene" uid="uid://2dwtol1f3sey" path="res://scenes/rooms/Room_ExactlyionCentral.tscn" id="17_bi5uk"]
[ext_resource type="PackedScene" uid="uid://be402c7tmtfjf" path="res://scenes/rooms/Room_ExactlyionBattlefield2.tscn" id="18_6tufi"]
[ext_resource type="PackedScene" uid="uid://djx4sn2eal13h" path="res://scenes/rooms/Room_ExactlyionMainframe.tscn" id="18_rdbnv"]
[ext_resource type="PackedScene" uid="uid://c8nfmopkmdkk7" path="res://scenes/rooms/Room_ExactlyionValentina.tscn" id="19_ojk8u"]
[ext_resource type="PackedScene" uid="uid://ci44hikud0mu" path="res://scenes/world/transition_manager.tscn" id="20_7o6hr"]
[ext_resource type="PackedScene" uid="uid://bew4rnh5f46sy" path="res://scenes/world/cutscene_intro.tscn" id="21_exdw8"]
[ext_resource type="PackedScene" uid="uid://cjvrxjjcgu8qo" path="res://scenes/ui/game_hud.tscn" id="22_lv2sh"]
[ext_resource type="PackedScene" uid="uid://kbywn64grvbj" path="res://scenes/rooms/Room_Restart.tscn" id="24_mviny"]
[ext_resource type="Script" path="res://scripts/world/Global_Sky.gd" id="25_riat8"]
[ext_resource type="Texture2D" uid="uid://b1gd4c7mqo3uw" path="res://assets_image/Background/background_global.png" id="26_s8eqm"]
[ext_resource type="Texture2D" uid="uid://b44my00md6qm4" path="res://assets_image/Background/background_globalv2.png" id="27_jkmgr"]
[ext_resource type="Texture2D" uid="uid://bdy8sq4t8gvyk" path="res://assets_image/Background/background_global_dungeon.png" id="27_ksvch"]
[ext_resource type="Texture2D" uid="uid://bw50uxyd7pvht" path="res://assets_image/Background/Map/mapsV2.png" id="33_xfl3i"]

[sub_resource type="TileSet" id="TileSet_jlx8q"]
physics_layer_0/collision_layer = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4w8it"]
shader = ExtResource("6_66776")
shader_parameter/intensity = 1.0
shader_parameter/tint_color = Color(1, 0, 0, 0.6)
shader_parameter/noise_intensity = 0.5

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3he12"]
load_path = "res://.godot/imported/background_globalv2.png-591a9b11fc89fc71ee566e69d5b5c93c.ctex"

[node name="World" type="Node2D"]
script = ExtResource("1_w1wil")

[node name="TileMap" type="TileMap" parent="." groups=["Platforms"]]
tile_set = SubResource("TileSet_jlx8q")
format = 2
layer_0/tile_data = PackedInt32Array(6881195, 262145, 1)

[node name="TransitionManager" parent="." instance=ExtResource("20_7o6hr")]

[node name="GameHUD" parent="." instance=ExtResource("22_lv2sh")]

[node name="ColorRect" type="ColorRect" parent="GameHUD"]
material = SubResource("ShaderMaterial_4w8it")
offset_left = -8072.0
offset_top = -4816.0
offset_right = 10232.0
offset_bottom = 6248.0
color = Color(1, 1, 1, 0)
script = ExtResource("7_t1be6")

[node name="MapScreen" parent="." instance=ExtResource("5_4gctl")]

[node name="Player" parent="." instance=ExtResource("3_pp1my")]
position = Vector2(687, 1596)

[node name="Marker2D_Cutscene_A" type="Marker2D" parent="."]
position = Vector2(7896, 5264)

[node name="Marker2D_Cutscene_B" type="Marker2D" parent="."]
position = Vector2(5256, 5176)

[node name="Marker2D_Cutscene_C" type="Marker2D" parent="."]
position = Vector2(3888, 5176)

[node name="CutsceneIntro" parent="." instance=ExtResource("21_exdw8")]
position = Vector2(5800, 4832)
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(667, 1569)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
metadata/_edit_lock_ = true

[node name="Room_AerendaleJunkyard" parent="." instance=ExtResource("5_d2ced")]
position = Vector2(-1537, 2208)
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="Room_AerendaleJunkyard"]
position = Vector2(-207, 56)

[node name="Room_AerendaleTown" parent="." instance=ExtResource("4_6wqko")]
position = Vector2(-280, 2208)
metadata/_edit_lock_ = true

[node name="Room_AerendaleBattlefield" parent="." instance=ExtResource("6_t47eu")]
position = Vector2(1152, 88)
metadata/_edit_lock_ = true

[node name="Room_AerendaleCapital" parent="." instance=ExtResource("7_ou7s5")]
position = Vector2(-1607, 1248)
metadata/_edit_lock_ = true

[node name="Room_HiddenRuins" parent="." instance=ExtResource("9_8mm3s")]
position = Vector2(3568, 3928)
metadata/_edit_lock_ = true

[node name="Room_HiddenRuinsField" parent="." instance=ExtResource("9_v56yw")]
position = Vector2(6768, 3496)
metadata/_edit_lock_ = true

[node name="Room_TromarveliaTown" parent="." instance=ExtResource("10_vsvcc")]
position = Vector2(-2920, -152)
metadata/_edit_lock_ = true

[node name="Room_TromarveliaBattlefield" parent="." instance=ExtResource("11_rs5ry")]
position = Vector2(-5086, 2656)
metadata/_edit_lock_ = true

[node name="Room_TromarveliaCastle" parent="." instance=ExtResource("12_bfh2l")]
position = Vector2(258, 4098)
metadata/_edit_lock_ = true

[node name="Room_TromarveliaDungeon" parent="." instance=ExtResource("13_wwr1u")]
position = Vector2(-5392, 5088)
metadata/_edit_lock_ = true

[node name="Room_TromarveliaNora" parent="." instance=ExtResource("14_mfqso")]
position = Vector2(-3970, -2053)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionTown" parent="." instance=ExtResource("15_wky0v")]
position = Vector2(5312, -104)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionBattlefield" parent="." instance=ExtResource("16_acxiu")]
position = Vector2(4736, -680)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionCentral" parent="." instance=ExtResource("17_bi5uk")]
position = Vector2(7952, -1352)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionBattlefield2" parent="." instance=ExtResource("18_6tufi")]
position = Vector2(8816, -1304)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionMainframe" parent="." instance=ExtResource("18_rdbnv")]
position = Vector2(5848, -2456)
metadata/_edit_lock_ = true

[node name="Room_ExactlyionValentina" parent="." instance=ExtResource("19_ojk8u")]
position = Vector2(6565, 2023)
metadata/_edit_lock_ = true

[node name="Room_Restart" parent="." instance=ExtResource("24_mviny")]
position = Vector2(-1015, -1628)
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource("25_riat8")

[node name="Aerendale_sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Aerendale_sky"]
position = Vector2(-2280, 6672)
texture = ExtResource("26_s8eqm")
vframes = 4
metadata/_edit_lock_ = true

[node name="Aerendale_ruins" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 50)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Aerendale_ruins"]
position = Vector2(-2170, 8595)
texture = ExtResource("27_ksvch")
vframes = 4
metadata/_edit_lock_ = true

[node name="Aerendale_sky2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Aerendale_sky2"]
position = Vector2(-2312, 7688)
texture = SubResource("CompressedTexture2D_3he12")
vframes = 4
metadata/_edit_lock_ = true

[node name="Tromarvelia_sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Tromarvelia_sky"]
position = Vector2(-128, 6704)
texture = ExtResource("26_s8eqm")
vframes = 4
frame = 1
metadata/_edit_lock_ = true

[node name="Tromarvelia_dungeon" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 30)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Tromarvelia_dungeon"]
position = Vector2(-152, 8704)
texture = ExtResource("27_ksvch")
vframes = 4
frame = 1
metadata/_edit_lock_ = true

[node name="Tromarvelia_sky2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Tromarvelia_sky2"]
position = Vector2(-144, 7600)
texture = SubResource("CompressedTexture2D_3he12")
vframes = 4
frame = 1
metadata/_edit_lock_ = true

[node name="Exactlyion_sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Exactlyion_sky"]
position = Vector2(1680, 6736)
texture = ExtResource("26_s8eqm")
vframes = 4
frame = 2
metadata/_edit_lock_ = true

[node name="Exactlyion_tower" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 70)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Exactlyion_tower"]
position = Vector2(1784, 8744)
texture = ExtResource("27_ksvch")
vframes = 4
frame = 2
metadata/_edit_lock_ = true

[node name="Exactlyion_sky2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 20)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Exactlyion_sky2"]
position = Vector2(1656, 7792)
texture = ExtResource("27_jkmgr")
vframes = 4
frame = 2
metadata/_edit_lock_ = true

[node name="Restart" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(-0.1, -0.005)
motion_offset = Vector2(0, 50)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Restart"]
position = Vector2(3608, 6896)
texture = ExtResource("26_s8eqm")
vframes = 4
frame = 3
metadata/_edit_lock_ = true

[node name="MapTexture" type="TextureRect" parent="."]
visible = false
offset_left = -7888.0
offset_top = -4016.0
offset_right = -6608.0
offset_bottom = -3296.0
scale = Vector2(14.2, 14.2)
texture = ExtResource("33_xfl3i")
